fix: fix the border collapse bug

--- a/src/components/Cv/Cv.css
+++ b/src/components/Cv/Cv.css
@@ -98,6 +98,7 @@
       grid-column: 2;
       grid-row: 1 / 3;
       padding: 0;
+      margin-bottom: -4px;
 
       > img {
         width: 100%;
@@ -125,11 +126,16 @@
         border-right: none;
       }
 
+      &:not(&.r-edge) {
+        margin-right: -1px;
+      }
+
       > ul {
         display: grid;
         gap: 0.5rem;
 
-        > li, a {
+        > li,
+        a {
           display: flex;
           align-items: center;
           gap: 0.5rem;
